# Misc

./: .gitignore
Book/: book.toml
CJulia/: CMakeLists.txt  README.md  main.c
CJulia/include/: matrix.h  test.h  vector.h
CJulia/julia/: test.jl
CJulia/lib/: libtest.dylib
CJulia/src/: matrix.c  test.c  vector.c
CPP_20/: CMakeLists.txt  Database.cpp  Database.hpp  Employee.cpp  Employee.hpp  Matrix.hpp  main.cpp  test1.cpp  test2.cpp
Codes/: Justfile
Codes/c/: CMakeLists.txt
Codes/c/src/: n-body.c
Codes/cpp/: CMakeLists.txt  main.cpp
Codes/cpp/src/: coreguidelines.cpp
Codes/julia/: Project.toml
Codes/julia/src/: julia.jl
Codes/rust/: Cargo.toml
Codes/rust/assembly/: Cargo.toml
Codes/rust/assembly/src/: main.rs
Codes/rust/concurrency/: Cargo.toml
Codes/rust/concurrency/src/: lib.rs
Codes/rust/helloworld-grpc/: Cargo.toml  build.rs
Codes/rust/misc/: Cargo.toml
Codes/rust/misc/src/: lib.rs
Codes/rust/n-body/: Cargo.toml
Codes/rust/n-body/src/: lib.rs  unsafe_code.rs
Complex/cpp/: complex.cpp  complex.cppm
Complex/julia/: complex.jl
Complex/rust/src/: complex.rs  main.rs
CppProjects/: is_int.cpp
DiffusionXX/: .gitignore  Project.toml  README.md
DiffusionXX/docs/: Project.toml  make.jl
DiffusionXX/docs/src/: index.md
DiffusionXX/src/: DiffusionXX.jl
DiffusionXX/src/ContinuousModel/: CTRW.jl
DiffusionXX/src/DiscreteModel/: DiscreteModel.jl  _randomwalk1d.jl  _randomwalk2d.jl  _randomwalk3d.jl  randomwalk.jl
DiffusionXX/src/GaussianNoise/: GaussianNoise.jl
DiffusionXX/src/Random/: Random.jl  randpower.jl  randstable.jl  utils.jl
DiffusionXX/test/: rand_test.jl  runtests.jl
FDESolver/: bench.sh
FDESolver/fdesolver_cpp/: CMakeLists.txt
FDESolver/fdesolver_jl/: Project.toml  bench.jl  main.jl
FDESolver/fdesolver_jl/src/: fdesolver_jl.jl
FDESolver/fdesolver_rs/: Cargo.toml
FDESolver/fdesolver_rs/benches/: benchmark.rs
FDESolver/fdesolver_rs/src/: lib.rs  solver.rs
Hello-Algo/Cpp/hashmap/: CMakeLists.txt  hashmap.cpp  hashmap.hpp
Hello-Algo/Cpp/linked_list/: CMakeLists.txt  linked_list.hpp  main.cpp
Hello-Algo/Cpp/linkedlist/: list.cpp.txt
Hello-Algo/Cpp/tree/: CMakeLists.txt  main.cpp
Julia/: .gitignore  README.md  infix.jl  test.typ
Julia/Basis/: Algorithm.jl  Strassen.jl  test.jl
Julia/CJuPy/: README.md
Julia/FDM/: RK4.c  RK4.jl  RK4.py
Julia/Fenicsx&Gridap/: README.md  main.py
Julia/FrationNumber/: FractionNumber.jl  fraction.jl
Julia/GridapDemo/: model.msh  result.vtu  solves.jl  test.jl
Julia/HeatEquation/: demo.jl  meshes.jl  solver.jl
Julia/NS/: NS.jl  NSDemo.jl
Julia/NSDiffusion/: NSDiffusion.jl  model.msh  v2.jl
Julia/NSDiffusion/plutodemo/: NS.jl  (+3 more)
Julia/ODEs/: methodofline.jl  methodofline.py
Julia/PINN/: poisson.jl
Julia/PlutoDemo/: ContourDemo  DiffusionDemo.jl  flux_demo.jl  heat.jl  poisson1d.jl
Julia/Poisson/: FDM.jl  Poisson.jl  model.msh  result.vtu
Julia/RefDemo/: main  ref.cpp  ref.jl
Julia/expression_problem/: main.cpp  main.jl  shape.hpp  shape.jl  shape.py
Julia/forloop/: demo.m  forloop.c  forloop.jl  forloop.py
Julia/fractional/: L1method.jl
Julia/gui/: hello.py
Julia/jnumpy/: mc_pi.jl  test.py
Julia/nscn/: Project.toml  main.jl
Julia/overloadingVSdispatching/: dispatching.jl  main  overloading.cpp
Julia/simulation/: bm.py  msd_test.jl
Julia/taste/: divcurl.jl  test.jl
Julia/test/: test.jl
Julia/znmodula/: mod.jl  mod.py
Julia/分数阶方程/: L1-FEM.jl
Julia/并行计算/: threads_test.jl  workaround.jl
Julia/康复训练/: 1.jl
Julia/特殊函数/: MittagLeffler.jl
LinkedList/: .gitignore
LinkedList/cpp/: linkedlist.cpp
LinkedList/python/: linkedlist.py
N-Body-Problem/n_body_cpp/: CMakeLists.txt  main.cpp
N-Body-Problem/n_body_jl/: Project.toml
N-Body-Problem/n_body_rs/: Cargo.toml
RationalNumber/cpp/: .gitignore  CMakeLists.txt  main.cpp
RustProjects/: Cargo.toml
RustProjects/demo/: Cargo.toml
comparing_languages/: run.sh
comparing_languages/julia/: code.jl
comparing_languages/rust/: Cargo.toml  code.rs
cpp/: code.cpp
cxxproject/: .gitignore  CMakeLists.txt  main.cpp  vcpkg.json
cxxproject/include/: hello.hpp
cxxproject/modules/: forwardlist.cppm  linearlist.cppm  smart_pointer.cppm
cxxproject/src/: hello.cpp
hello_rust/: Cargo.toml
hello_rust/src/: basic_structure.rs  enums.rs  guessing_game.rs  lifetime.rs  main.rs  ownership.rs  traits.rs
minigrep/: poem.txt
minigrep/src/: lib.rs  main.rs
python/: code.py
snippets/cppsnippet/: CMakeLists.txt
snippets/cppsnippet/include/: num.hpp
snippets/cppsnippet/src/: main.cpp
wasm-game-of-life/: Cargo.toml
wasm-game-of-life/examples/: game_of_life.rs
wasm-game-of-life/src/: lib.rs
wasm-game-of-life/www/: index.html  index.js  package-lock.json  package.json  webpack.config.js
workspace/: Cargo.toml
workspace/CPP/: test.cpp
(+35 files in other folders)
